samples/_failures_safe/1761393408_aa99ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78d82d02.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_78d82d02.c:136:11: error: expected ‘;’ at end of input
  136 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_78d82d02.c:136:5: error: expected declaration or statement at end of input
  136 |     printf
      |     ^~~~~~
